// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRouteData should return first section if pagePerSection and hash is empty 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              Object {
                "content": "const a = 0",
                "evalInContext": [Function],
                "type": "code",
              },
              Object {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
        Object {
          "module": 2,
          "name": "Image",
          "props": Object {
            "displayName": "Image",
          },
        },
      ],
      "exampleMode": "collapse",
      "name": "Components",
      "sectionDepth": 0,
      "sections": Array [],
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return not found if pagePerSection and hash is #/Buttons/Label/Not 1`] = `
Object {
  "displayMode": "notFound",
  "sections": Array [],
}
`;

exports[`getRouteData should return one component 1`] = `
Object {
  "displayMode": "component",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              Object {
                "content": "const a = 0",
                "evalInContext": [Function],
                "type": "code",
              },
              Object {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one component if pagePerSection and hash is #/Buttons/Label 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Label",
        },
      ],
      "exampleMode": "collapse",
      "slug": "buttons",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a component 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "components": Array [
        Object {
          "module": 1,
          "name": "Button",
          "props": Object {
            "displayName": "Button",
            "examples": Array [
              Object {
                "content": "# title",
                "type": "markdown",
              },
            ],
          },
        },
      ],
      "exampleMode": "collapse",
      "slug": "components",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one example from a section 1`] = `
Object {
  "displayMode": "example",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        Object {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section 1`] = `
Object {
  "displayMode": "section",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        Object {
          "content": "const a = 0",
          "evalInContext": [Function],
          "type": "code",
        },
        Object {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section if pagePerSection and hash is #/Section 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [],
      "content": Array [
        Object {
          "content": "const a = 0",
          "evalInContext": [Function],
          "type": "code",
        },
        Object {
          "content": "# title",
          "type": "markdown",
        },
      ],
      "exampleMode": "collapse",
      "name": "Section",
      "sectionDepth": 0,
      "sections": Array [],
      "slug": "section",
      "usageMode": "collapse",
    },
  ],
}
`;

exports[`getRouteData should return one section without components if pagePerSection and hash is #/Buttons 1`] = `
Object {
  "displayMode": "all",
  "sections": Array [
    Object {
      "components": Array [],
      "exampleMode": "collapse",
      "name": "Buttons",
      "sectionDepth": 2,
      "sections": Array [],
      "slug": "buttons",
      "usageMode": "collapse",
    },
  ],
}
`;
